Closed Bug 1175289 Opened 9 years ago Closed 9 years ago

18012 instances of 'WARNING: Subdocument container has no frame' while running linux64 debug tests

Categories

(Core :: Layout, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla41
Tracking Status
firefox41 --- fixed

People

(Reporter: erahm, Assigned: erahm)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

There are 18012 instances of 'WARNING: Subdocument container has no frame: file layout/base/nsDocumentViewer.cpp, line 2520' emitted when running linux64 debug log tests. These are spread out somewhate evenly across tests. We have bug 519407 on file to investigate further, for now lets go ahead and silence the warnings by default.
This adds an analog to NS_WARNING for using with the layout log. When layout logging is enabled the output format looks like:
> 1980789504[10039d070]: [42963] WARNING: Subdocument container has no frame: file /Users/ericrahm/dev/mozilla-central/layout/base/nsDocumentViewer.cpp, line 2521
Attachment #8623287 - Flags: review?(mats)
Comment on attachment 8623287 [details] [diff] [review]
Part 1: Add LAYOUT_WARNING

You forgot the bug number in the commit message.
Attachment #8623287 - Flags: review?(mats) → review+
(In reply to Mats Palmgren (:mats) from comment #3)
> Comment on attachment 8623287 [details] [diff] [review]
> Part 1: Add LAYOUT_WARNING
> 
> You forgot the bug number in the commit message.

Interesting, must be a quirk of bzexport. Luckily, it's updated locally!
Comment on attachment 8623291 [details] [diff] [review]
Part 2: Disable "Subdocument container has no frame" warning by default

Might be worth adding "// XXX bug 1175289" at the end there to point out
why this warning is disabled?
Attachment #8623291 - Flags: review?(mats) → review+
(In reply to Mats Palmgren (:mats) from comment #5)
> Comment on attachment 8623291 [details] [diff] [review]
> Part 2: Disable "Subdocument container has no frame" warning by default
> 
> Might be worth adding "// XXX bug 1175289" at the end there to point out
> why this warning is disabled?

Good idea, I'll add the note.
https://hg.mozilla.org/mozilla-central/rev/f5ef44a112b5
https://hg.mozilla.org/mozilla-central/rev/31303df54182
Status: ASSIGNED → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla41
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: