Bug 1175289 - Part 1: Add LAYOUT_WARNING. r=mats